--- a/index.html
+++ b/index.html
@@ -1,5 +1,51 @@
-<p>Hello 大家好</p>
-<p>fzz这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
-
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>个人主页</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header>
+		<h1>我的名字</h1>
+		<nav>
+			<ul>
+				<li><a href="#">主页</a></li>
+				<li><a href="#">关于我</a></li>
+				<li><a href="#">作品</a></li>
+				<li><a href="#">联系我</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section>
+			<h2>关于我</h2>
+			<p>这里是一段关于我的介绍。</p>
+		</section>
+		<section>
+			<h2>作品</h2>
+			<ul>
+				<li><a href="#">作品 1</a></li>
+				<li><a href="#">作品 2</a></li>
+				<li><a href="#">作品 3</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>联系我</h2>
+			<form>
+				<label for="name">姓名：</label>
+				<input type="text" id="name" name="name"><br>
+				<label for="email">邮箱：</label>
+				<input type="email" id="email" name="email"><br>
+				<label for="message">留言：</label>
+				<textarea id="message" name="message"></textarea><br>
+				<input type="submit" value="提交">
+			</form>
+		</section>
+	</main>
+	<footer>
+		<p>版权所有 © 2023 我的名字</p>
+	</footer>
+</body>
+</html>
