--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <!--====== Title ======-->
-    <title>Freelancer - CV and Portfolio Template</title>
+    <title>Zezheng Fu 的个人网页</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -86,13 +86,10 @@
                                         <a class="page-scroll" href="#about">About<span></span></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#services">Services<span></span></a>
+                                        <a class="page-scroll" href="#education">Education<span></span></a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#project">Portfolio<span></span></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="page-scroll" href="#pricing">Pricing<span></span></a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#work">Experience<span></span></a>
@@ -224,7 +221,7 @@
 
     <!--====== SERVICES PART START ======-->
 
-    <section id="services" class="services_area pt-115 pb-120">
+    <section id="education" class="services_area pt-115 pb-120">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -380,96 +377,6 @@
 </div> 
 </section>
 
-
-<section id=pricing class="pricing_area gray-bg pt-115 pb-120">
-<div class=pricing_shape>
-<img data-pagespeed-lazy-src="assets/images/shape-3.png" alt=shape data-pagespeed-url-hash=2671336160 src="/pagespeed_static/1.JiBnMqyl6S.gif" onload="pagespeed.lazyLoadImages.loadIfVisibleAndMaybeBeacon(this);" onerror="this.onerror=null;pagespeed.lazyLoadImages.loadIfVisibleAndMaybeBeacon(this);">
-</div> 
-<div class=container>
-<div class="row justify-content-center">
-<div class=col-lg-6>
-<div class="section_title text-center pb-30">
-<h5 class=sub_title>Pricing</h5>
-<h3 class=main_title>Pricing Plans</h3>
-<ul class=line>
-<li></li>
-<li></li>
-<li></li>
-</ul>
-</div> 
-</div>
-</div> 
-<div class="row justify-content-center">
-<div class="col-lg-4 col-md-7 col-sm-8">
-<div class="single_price mt-30 wow fadeInUpBig" data-wow-duration=1.3s data-wow-delay=0.2s>
-<div class=price_header>
-<h4 class=price_title>Basic</h4>
-<span class=price>$75</span>
-<p>Only PSD Service</p>
-</div>
-<div class=price_body>
-<ul>
-<li><i class="lni lni-checkmark"></i> Graphic Design</li>
-<li><i class="lni lni-checkmark"></i> Web Design</li>
-<li><i class="lni lni-close"></i> UI/UX</li>
-<li><i class="lni lni-close"></i> HTML/CSS</li>
-<li><i class="lni lni-close"></i> SEO Marketing</li>
-<li><i class="lni lni-close"></i> Business Analysis</li>
-</ul>
-</div>
-<div class=price_btn>
-<a href="#" class="main-btn main-btn-2">Choose Plan</a>
-</div>
-</div> 
-</div>
-<div class="col-lg-4 col-md-7 col-sm-8">
-<div class="single_price mt-30 wow fadeInUpBig" data-wow-duration=1.3s data-wow-delay=0.5s>
-<span class=sticker>Best Value</span>
-<div class=price_header>
-<h4 class=price_title>Standard</h4>
-<span class=price>$250</span>
-<p>Complete Service</p>
-</div>
-<div class=price_body>
-<ul>
-<li><i class="lni lni-checkmark"></i> Graphic Design</li>
-<li><i class="lni lni-checkmark"></i> Web Design</li>
-<li><i class="lni lni-checkmark"></i> UI/UX</li>
-<li><i class="lni lni-checkmark"></i> HTML/CSS</li>
-<li><i class="lni lni-close"></i> SEO Marketing</li>
-<li><i class="lni lni-close"></i> Business Analysis</li>
-</ul>
-</div>
-<div class=price_btn>
-<a href="#" class=main-btn>Choose Plan</a>
-</div>
-</div> 
-</div>
-<div class="col-lg-4 col-md-7 col-sm-8">
-<div class="single_price mt-30 wow fadeInUpBig" data-wow-duration=1.3s data-wow-delay=0.8s>
-<div class=price_header>
-<h4 class=price_title>Premium</h4>
-<span class=price>$350</span>
-<p>Complete Service</p>
-</div>
-<div class=price_body>
-<ul>
-<li><i class="lni lni-checkmark"></i> Graphic Design</li>
-<li><i class="lni lni-checkmark"></i> Web Design</li>
-<li><i class="lni lni-checkmark"></i> UI/UX</li>
-<li><i class="lni lni-checkmark"></i> HTML/CSS</li>
-<li><i class="lni lni-checkmark"></i> SEO Marketing</li>
-<li><i class="lni lni-checkmark"></i> Business Analysis</li>
-</ul>
-</div>
-<div class=price_btn>
-<a href="#" class="main-btn main-btn-2">Choose Plan</a>
-</div>
-</div> 
-</div>
-</div> 
-</div> 
-</section>
 
 
 <section id=testimonial class="testimonial_area pt-115 pb-120">
